--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My Image</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kotlin Multiplatform</title>
 </head>
 <body>
-  <img src="https://imgur.com/t/nature/mKsAaBe" alt="PR L" /> 
+  <h1>Kotlin Multiplatform solutions for Android, iOS, Desktop and Web</h1>
 </body>
 </html>
