--- a/index.html
+++ b/index.html
@@ -3,9 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kotlin Multiplatform</title>
+  <title>Kotlin Multiplatform Solutions</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Kotlin Multiplatform solutions for Android, iOS, Desktop and Web</h1>
+  <header>
+    <h1>Multiplatform solutions with a single code base</h1>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Edit</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section class="hero">
+      <h2>Solutions for Android, iOS, Desktop and Web</h2>
+      <p>We develop and share code across platforms. We manage a single project and deploy it to all platforms</p>
+    </section>
+    <section class="about">
+      <h3>About</h3>
+      <p>Kotlin Multiplatform is a framework for creating cross-platform mobile, desktop, and web applications using Kotlin code.</p>
+    </section>
+    <section class="call-to-action">
+      <a href="#" class="button">Learn More</a>
+    </section>
+  </main>
+  <footer>
+    <p>© 2024 Prospat Ltd</p>
+  </footer>
 </body>
 </html>
